# website

./: .env.example  .eslintrc.json  DEVNOTES.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.js  postcss.config.mjs  repos.json  repos.md  repos.ts  repos.yaml  tailwind.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: new_project.yml
.github/workflows/: Master_Deploy.yml  branch-builder.yml  docker-image.yml  master-build.yml  nextjs.yml
CI/: Dockerfile  pyproject.toml  test_yaml.py  testing.ipynb
docs/: about.md  about.mdx  adv_soldering.md  adv_soldering.mdx  basic_soldering.md  basic_soldering.mdx  cleaning_standards.md  cleaning_standards.mdx  getting_started_simple.md  intermediate_soldering.md  intermediate_soldering.mdx  mentee_checksheet.md  mentor_checksheet.mdx  mentor_steps.mdx  migration.md  new_members.md  new_members.mdx  resources.md  resources.mdx  returning_members.md  returning_members.mdx  rules.md  soldering.md  soldering.mdx  tutorial.md  tutorial.mdx
docs/archive/: getinvolved.md  githubTips.md  index.md  joining.md  location.md  openhouse.md  tutorial_depreciated.md
frontend/: .gitignore  package-lock.json  package.json
markdowns/: about.md  adv_soldering.md  bambu_training.md  basic_soldering.md  gen_soldering.md  getting_started_simple.md  mentee_checksheet.md  mentor_checksheet.md  mentor_steps.md  migration.md  new_members.md  quickstart.md  resources.md  rules.md  soldering.md  tutorial.md  useful_links.md
src/: utils.ts
(+307 files in other folders)
