[tool.poetry]
name = "ci"
version = "0.1.0"
description = ""
authors = ["Forsyth-Creations"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.1"
pytest = "^7.4.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
